TAG: alleleload-6-0-10-1
DATE: 05/25/2017
STAFF: lec 
CHANGES:
1) TR12540/Disease Ontology/bin/makeAllele.py/obsolete field BCP change required

TAG: alleleload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: alleleload-6-0-5-1, 6-0-6-1
DATE: 08/31/2016
STAFF: kstone
CHANGES: changed ftp url

TAG: alleleload-6-0-4-2
DATE: 06/27/2016
STAFF: lec 
CHANGES: TR12377
1) makeIKMC.py : remove "\n" from ikmcNote
2) makeIKMC.py/makeAllele.py : fixed documentation

TAG: alleleload-6-0-4-1
DATE: 04/28/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: alleleload-6-0-1-4
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) ikmc.config.default: Don't override MAIL_LOG_PROC and MAIL_LOG_CUR
2) test.config.default: Don't override MAIL_LOG_CUR

TAG: alleleload-6-0-1-3
DATE: 11/16/2015
STAFF: lec 
CHANGES:
1) fix bin/makeAllele.py/ikmcSQLs script

TAG: alleleload-6-0-1-2
TAG: alleleload-6-0-1-1
DATE: 10/14/2015, 10/20/2015
STAFF: lec 
CHANGES:
1) TR12011/12070/scrum-dog/use new input file
2) postgres cleanup

TAG: alleleload-6-0-0-2
DATE: 08/21/15
STAFF: lec
CHANGES: TR12020/obsolete all_marker_assoc table

TAG: alleleload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: alleleload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: alleleload-tr11750-BP
DATE: 05/28/2015
STAFF: kstone

TAG: alleleload-5-1-8-1
DATE: 04/08/2014
STAFF: lec
CHANGES:
1) TR11515/allele stuff/Derivative Allele Load
updates for new schema (collection and allele subtypes)

TAG: alleleload-5-1-7-4
TAG: alleleload-5-1-7-3
TAG: alleleload-5-1-7-2
TAG: alleleload-5-1-7-1
DATE: 03/06/2014
STAFF: lec
CHANGES:
1) TR11515/allele stuff/Derivative Allele Load
